--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="/home/justin/Programming/Android/admob-sdk/admob-sdk-android.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Justin.User/Documents/Programming/GoogleAdMobAdsSdk-4.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
