--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,10 +15,14 @@
             </intent-filter>
         </activity>
         
+        <activity android:name="com.google.ads.AdActivity"
+              android:configChanges="keyboard|keyboardHidden|orientation"/>
+        
         <!-- The application's publisher ID assigned by AdMob -->
         <meta-data android:value="a14c718035ad191" android:name="ADMOB_PUBLISHER_ID" />
     </application>
 
 	<!-- AdMob SDK permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 </manifest> 
