--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-sdk android:minSdkVersion="4" />
       
     <application android:icon="@drawable/ic_swimconverter" android:label="@string/app_name">    	
-        <activity android:name=".SwimConverter"
+        <activity android:name="SwimActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
